<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_main"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_main" />

    <item
        android:id="@+id/navigation_first_stab"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="@string/title_first_stab" />

    <item
        android:id="@+id/navigation_second_stab"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="@string/title_second_stab" />

    <item
        android:id="@+id/navigation_third_stab"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="@string/title_third_stab" />

    <item
        android:id="@+id/navigation_fourth_stab"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="@string/title_fourth_stab" />

</menu>